--- a/navtree.css
+++ b/navtree.css
@@ -20,8 +20,8 @@
 }
 
 #nav-tree .selected {
-    background-color: #222;
-    color: #66B322;
+    background-color: var(--content-bg);
+    color: var(--accent-green);
 }
 
 #nav-tree img {
@@ -50,7 +50,7 @@
 
 #nav-tree .selected a {
     text-decoration: none;
-    color: #66B322;
+    color: var(--accent-green);
 }
 
 #nav-tree .children_ul {
@@ -65,7 +65,7 @@
 
 #nav-tree {
     padding: 0 0;
-    background-color: #222;
+    background-color: var(--content-bg);
     font-size: 14px;
     overflow: auto;
 }
@@ -92,7 +92,7 @@
 }
 
 .ui-resizable-e {
-    background-color: #222;
+    background-color: var(--content-bg);
     background-size: 100%;
     background-attachment: scroll;
     cursor: ew-resize;
@@ -114,7 +114,7 @@
 }
 
 #nav-tree {
-    background-color: #333;
+    background-color: var(--content-bg-l1);
     -webkit-overflow-scrolling: touch; /* iOS 5+ */
 }
 
